# jn-ec-master

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deno.json  mod.ts
.cargo/: config.toml
.cursor/rules/: general.mdc
.github/workflows/: build.yml
docs/: ETHERCRAB_REVIEW.md
docs/compliance/: 01_CLASS_B_MATRIX.md  02_ENI_PARSER_SPEC.md  03_DISCOVERY_mode_SPEC.md
ethercrab_ffi/: Cargo.toml
ethercrab_ffi/src/: error_tests.rs  lib.rs
ethercrab_ffi/tests/: eeprom_tests.rs  emergency_tests.rs  integration_test.rs  mailbox_tests.rs  resource_management_tests.rs  sdo_tests.rs
examples/: cycle_eni_config.ts  discover.ts  simple_master.ts  three_phase_check.ts
scripts/: build-local.ts  download-binaries.ts
src/: ec_master.ts
src/__specs__/: ec_master.test.ts
src/ffi/: symbols.ts
src/tests/: api.test.ts  class_b_compliance.test.ts  integration-regression.test.ts  mapper.test.ts  parse-eni.test.ts
src/tests/fixtures/: coe_slave.eni.xml  compliant.eni.xml  mega_master_eni.xml  no_protocol.eni.xml  protocol_tag_only.eni.xml
src/types/: ec_types.ts  eni-config.ts  errors.ts
src/utils/: cycle-loop.ts  eni-loader.ts  parse-eni.ts  process-data-mapper.ts  resolve-slaves.ts
src/utils/__specs__/: parse-eni.test.ts  process-data-mapper.test.ts  resolve-slaves.test.ts
