[package]
name = "ethercrab_ffi"
version = "0.1.7"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ethercrab = { path = "../ethercrab" }
smol = "2.0.0"
libc = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
futures-lite = "2.0"
spin = { version = "0.10", features = ["std"] }

[dev-dependencies]
serial_test = "3.0"

[target.'cfg(windows)'.dependencies]
pnet_datalink = "0.35"
pcap = "1.1"
